scrollbar fixes & styles

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,3 +33,24 @@ a,
     padding: 0 2rem;
   }
 }
+
+html {
+  scrollbar-gutter: stable both-edges !important;
+  width: 750px;
+}
+
+::-webkit-scrollbar {
+  width: 1.2vw;
+}
+
+::-webkit-scrollbar-track {
+  background: #2b2b2b;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
